--- a/camera-feed-object-detection-tensorflowjs/dockerfile
+++ b/camera-feed-object-detection-tensorflowjs/dockerfile
@@ -1,10 +1,12 @@
 # Use an official Node.js base image
-FROM node:18-slim
+FROM node:23.0.0-slim
 
 # Install dependencies for Coral TPU and other utilities
 RUN apt-get update && apt-get install -y \
     wget \
     curl \
+    python3 \
+    python3-pip \
     ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
@@ -18,6 +20,9 @@ RUN apt-get update && apt-get install -y libedgetpu1-std
 WORKDIR /app
 COPY package.json /app/package.json
 RUN npm install
+
+# Rebuild @tensorflow/tfjs-node from source
+RUN npm rebuild @tensorflow/tfjs-node --build-from-source
 
 # Copy your application code
 COPY . /app
