--- a/PID-balance-control/dockerfile
+++ b/PID-balance-control/dockerfile
@@ -1,5 +1,5 @@
 # Use Node.js image
-FROM node:18-slim
+FROM node:18
 
 # Install necessary dependencies
 RUN apt-get update && apt-get install -y \
@@ -11,6 +11,8 @@ RUN apt-get update && apt-get install -y \
 
 # Set the working directory
 WORKDIR /app
+
+RUN npm install coffee-script@1.12.7 --save
 
 # Copy package.json and install dependencies
 COPY package.json /app/package.json
