--- a/PID-balance-control/package.json
+++ b/PID-balance-control/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "onoff": "^6.0.3",
     "mpu6050": "^0.1.4",
-    "i2c-bus": "^5.2.3"
+    "i2c-bus": "^5.2.3",
+    "coffee-script": "^1.12.7"
   },
   "author": "Your Name",
   "license": "MIT"
