--- a/frontend-web-api/package.json
+++ b/frontend-web-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "camera-feed-object-detection",
+  "name": "frontend-api",
   "version": "1.0.0",
   "description": "A camera feed object detection app using TensorFlow.js and Coral TPU",
   "main": "app.js",
