--- a/camera-feed-object-detection-tensorflowjs/dockerfile
+++ b/camera-feed-object-detection-tensorflowjs/dockerfile
@@ -21,6 +21,8 @@ WORKDIR /app
 COPY package.json /app/package.json
 RUN npm install
 
+RUN npm i node-webcam
+
 # Rebuild @tensorflow/tfjs-node from source
 RUN npm rebuild @tensorflow/tfjs-node --build-from-source
 
