--- a/camera-feed-object-detection-tensorflowjs/package.json
+++ b/camera-feed-object-detection-tensorflowjs/package.json
@@ -4,9 +4,10 @@
   "description": "A camera feed object detection app using TensorFlow.js and Coral TPU",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "@tensorflow/tfjs-node": "^3.11.0",  
-    "mqtt": "^4.2.8"
+    "axios": "^1.7.7",
+    "express": "^4.21.1",
+    "mqtt": "^4.2.8",
+    "@tensorflow/tfjs-node": "^3.11.0"
   },
   "scripts": {
     "start": "node app.js"
