--- a/object-detection-tensorflowjs/package.json
+++ b/object-detection-tensorflowjs/package.json
@@ -7,9 +7,11 @@
     "axios": "^1.7.7",
     "express": "^4.21.1",
     "mqtt": "^4.2.8",
-    "@tensorflow/tfjs-node": "^3.11.0",
-    "@tensorflow/tfjs":"^4.21.0",
-    "@tensorflow-models/coco-ssd":"^2.2.3"
+    "@tensorflow/tfjs-node": "^4.10.0",  
+    "@tensorflow/tfjs": "^4.10.0",        
+    "@tensorflow-models/coco-ssd": "^2.1.0",
+    "@tensorflow/tfjs-backend-cpu": "^4.10.0",  
+    "@tensorflow/tfjs-backend-webgl": "^4.10.0"
   },
   "scripts": {
     "start": "node app.js"
