--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,8 @@
 services:
   webcam-stream:
-    build: ./webcam-stream
+    build:
+      context: ./webcam-stream
+      dockerfile: dockerfile  # Specify the custom filename here
     ports:
       - "3008:3008"
     networks:
@@ -9,6 +11,7 @@ services:
   object-detection:
     build:
       context: ./object-detection-tensorflowjs
+      dockerfile: dockerfile  # Specify the custom filename here
     container_name: object-detection-service
     ports:
       - "3000:3000"
@@ -24,6 +27,7 @@ services:
   astar-pathfinder:
     build:
       context: ./astar-pathfinder-obstacle-avoidance-node
+      dockerfile: dockerfile  # Specify the custom filename here
     container_name: astar-pathfinder-service
     ports:
       - "3002:3002"
@@ -39,6 +43,7 @@ services:
   pid-balance-control:
     build:
       context: ./PID-balance-control
+      dockerfile: dockerfile  # Specify the custom filename here
     container_name: pid-balance-control-service
     ports:
       - "3003:3003"
@@ -57,6 +62,7 @@ services:
   frontend-web-api:
     build:
       context: ./frontend-web-api
+      dockerfile: dockerfile  # Specify the custom filename here
     container_name: frontend-service
     ports:
       - "8080:8080"
@@ -126,6 +132,21 @@ services:
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
+    restart: unless-stopped
+
+  code-server:
+    build:
+      context: ./code-server
+      dockerfile: dockerfile  # Specify the custom filename here
+    container_name: code-server
+    ports:
+      - "8089:8089"
+    volumes:
+      - ./workspace:/home/coder/project  # Mount the workspace directory to persist files
+    environment:
+      PASSWORD: "your_secure_password"
+    networks:
+      - internal-net  # Added network to allow access to other containers
     restart: unless-stopped
 
 networks:
