--- a/PID-balance-control/package.json
+++ b/PID-balance-control/package.json
@@ -7,10 +7,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "onoff": "^6.0.3",
-    "mpu6050": "^0.1.4",
+    "coffee-script": "^1.12.7",
     "i2c-bus": "^5.2.3",
-    "coffee-script": "^1.12.7"
+    "mpu6050": "^0.1.4",
+    "onoff": "^6.0.3"
   },
   "author": "Your Name",
   "license": "MIT"
