--- a/frontend-web-api/package.json
+++ b/frontend-web-api/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.18.2",
-    "mqtt": "^4.2.8"
+    "mqtt": "^4.2.8",
+    "socket.io": "^4.8.1"
   },
   "scripts": {
     "start": "node app.js"
