--- a/pid-balance-control/dockerfile
+++ b/pid-balance-control/dockerfile
@@ -1,23 +1,28 @@
 # Use Node.js image
-FROM node:18
+FROM node:18.19.0
 
 # Install necessary dependencies
 RUN apt-get update && apt-get install -y \
+    libnode-dev \
+    libssl-dev \
+    libusb-1.0-0-dev \
+    libuv1-dev \
     i2c-tools \
     python3 \
     make \
-    g++ \ 
+    g++ \
+    apt-utils \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory
 WORKDIR /app
 
+# Install CoffeeScript (if necessary)
 RUN npm install coffee-script@1.12.7 --save
 
 # Copy package.json and install dependencies
 COPY package.json /app/package.json
-
-RUN npm install
+RUN npm install --build-from-source
 
 # Copy the application code
 COPY . /app
