--- a/pid-balance-control/package.json
+++ b/pid-balance-control/package.json
@@ -10,7 +10,8 @@
     "coffee-script": "^1.12.7",
     "i2c-bus": "^5.2.3",
     "mpu6050": "^0.1.4",
-    "onoff": "^6.0.3"
+    "onoff": "^6.0.3",
+    "mqtt": "^4.2.8"
   },
   "author": "Your Name",
   "license": "MIT"
