--- a/compose.yaml
+++ b/compose.yaml
@@ -54,6 +54,23 @@ services:
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
     restart: unless-stopped
 
+  motor-controller:
+    build:
+      context: ./motor-controller
+    container_name: motor-controller-service
+    
+    privileged: true
+    devices:
+      - "/dev/gpiomem:/dev/gpiomem"
+      - "/dev/i2c-1:/dev/i2c-1"
+    environment:
+      MQTT_BROKER_URL: mqtt://mqtt-broker:1883
+    depends_on:
+      - mqtt-broker
+    networks:
+      - internal-net
+    restart: always
+
   frontend-web-api:
     build:
       context: ./frontend-web-api
