--- a/PID-balance-control/dockerfile
+++ b/PID-balance-control/dockerfile
@@ -1,28 +1,23 @@
 # Use Node.js image
-FROM node:18.19.0
+FROM node:18
 
 # Install necessary dependencies
 RUN apt-get update && apt-get install -y \
-    libnode-dev \
-    libssl-dev \
-    libusb-1.0-0-dev \
-    libuv1-dev \
     i2c-tools \
     python3 \
     make \
-    g++ \
-    apt-utils \
+    g++ \ 
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory
 WORKDIR /app
 
-# Install CoffeeScript (if necessary)
 RUN npm install coffee-script@1.12.7 --save
 
 # Copy package.json and install dependencies
 COPY package.json /app/package.json
-RUN npm install --build-from-source
+
+RUN npm install
 
 # Copy the application code
 COPY . /app
