--- a/frontend-web-api/package.json
+++ b/frontend-web-api/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.18.2",
-    "mqtt": "^4.2.8",
-    "socket.io": "^4.8.1"
+    "mqtt": "^4.2.8"
   },
   "scripts": {
     "start": "node app.js"
