--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "description": "A camera feed object detection app using TensorFlow.js and Coral TPU",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "mqtt": "^4.2.8"
+    "express": "^4.21.1",
+    "mqtt": "^5.10.1",
+    "socket.io": "^4.8.1"
   },
   "scripts": {
     "start": "node app.js"
