--- a/motor-controller/dockerfile
+++ b/motor-controller/dockerfile
@@ -1,26 +1,32 @@
 # Use an official Node.js base image
 FROM node:23.0.0-slim
 
-# Install dependencies for Coral TPU
+# Install necessary dependencies
 RUN apt-get update && apt-get install -y \
     curl \
     wget \
     python3 \
     python3-pip \
+    build-essential \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
-# Install any additional packages (you can replace these with your project dependencies)
+# Install pigpio from source
+RUN git clone https://github.com/joan2937/pigpio.git /pigpio \
+    && cd /pigpio \
+    && make \
+    && make install
+
+# Install fivdi/pigpio Node.js package
 WORKDIR /app
-
 COPY package.json /app/package.json
-
 RUN npm install
 
 # Copy the rest of the application files
 COPY . .
 
-# Expose the necessary port for the application (if running a server)
-EXPOSE 8080
+# Expose the necessary port for the application
+EXPOSE 3009
 
 # Command to run your application
 CMD ["node", "app.js"]
