--- a/pid-balance/package.json
+++ b/pid-balance/package.json
@@ -10,7 +10,8 @@
     "onoff": "^6.0.3",
     "mpu6050": "^0.1.4",
     "i2c-bus": "^5.2.3",
-    "coffee-script": "^1.12.7"
+    "coffee-script": "^1.12.7",
+    "mqtt": "^5.10.1"
   },
   "author": "Your Name",
   "license": "MIT"
