--- a/webcam-stream/package.json
+++ b/webcam-stream/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.21.1",
-    "node-webcam": "^0.6.0"
+    "node-webcam": "^0.6.4",
+    "mqtt": "^5.10.1"
   },
   "author": "Your Name",
   "license": "MIT"
