--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "express": "^4.21.1",
     "mqtt": "^5.10.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "chart.js":"^4.4.6",
+    "three": "^0.170.0"
   },
   "scripts": {
     "start": "node app.js"
