--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -30,7 +30,8 @@
     "three": "^0.170.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.14.10",
-    "ngx-socket-io": "4.7.0"
+    "ngx-socket-io": "4.7.0",
+    "axios": "1.7.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.11",
