--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,18 @@
 services:
+  config-service:
+    build:
+      context: ./config-service
+    container_name: config-service
+    ports:
+      - "3004:3004"  # Expose the service's HTTP API
+    networks:
+      - internal-net
+    depends_on:
+      - mqtt-broker
+    environment:
+      - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
+    restart: unless-stopped
+    
   webcam-stream:
     build:
       context: ./webcam-stream
@@ -52,6 +66,7 @@ services:
       - internal-net
     depends_on:
       - mqtt-broker
+      - config-service
     environment:
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
     restart: unless-stopped
@@ -100,7 +115,7 @@ services:
       - external-net
     depends_on:
       - mqtt-broker
-      - webcam-stream
+      - config-service
     environment:
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
 
