--- a/compose.yaml
+++ b/compose.yaml
@@ -13,44 +13,44 @@ services:
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
     restart: unless-stopped
     
-  webcam-stream:
-    build:
-      context: ./webcam-stream
-    container_name: webcam-stream-service
-    ports:
-      - "3008:3008"
-    networks:
-      - internal-net
+  # webcam-stream:
+  #   build:
+  #     context: ./webcam-stream
+  #   container_name: webcam-stream-service
+  #   ports:
+  #     - "3008:3008"
+  #   networks:
+  #     - internal-net
 
-  object-detection:
-    build:
-      context: ./object-detection
-    container_name: object-detection-service
-    ports:
-      - "3000:3000"
-    networks:
-      - internal-net
-    depends_on:
-      - mqtt-broker
-      - webcam-stream
-    environment:
-      - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
-    tty: true
+  # object-detection:
+  #   build:
+  #     context: ./object-detection
+  #   container_name: object-detection-service
+  #   ports:
+  #     - "3000:3000"
+  #   networks:
+  #     - internal-net
+  #   depends_on:
+  #     - mqtt-broker
+  #     - webcam-stream
+  #   environment:
+  #     - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
+  #   tty: true
 
-  obstacle-avoidance:
-    build:
-      context: ./obstacle-avoidance
-    container_name: obstacle-avoidance-service
-    ports:
-      - "3002:3002"
-    networks:
-      - internal-net
-    depends_on:
-      - mqtt-broker
-      - webcam-stream
-    environment:
-      - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
-    tty: true
+  # obstacle-avoidance:
+  #   build:
+  #     context: ./obstacle-avoidance
+  #   container_name: obstacle-avoidance-service
+  #   ports:
+  #     - "3002:3002"
+  #   networks:
+  #     - internal-net
+  #   depends_on:
+  #     - mqtt-broker
+  #     - webcam-stream
+  #   environment:
+  #     - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
+  #   tty: true
 
   pid-balance-control:
     build:
@@ -100,7 +100,7 @@ services:
       - external-net
     depends_on:
       - mqtt-broker
-      - webcam-stream
+      # - webcam-stream
     environment:
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
 
