--- a/config-service/package.json
+++ b/config-service/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "frontend-server",
+  "name": "config",
   "version": "1.0.0",
-  "description": "Frontend server",
+  "description": "Config JSON",
   "main": "app.js",
   "dependencies": {
     "express": "^4.21.1",
-    "mqtt": "^5.10.1",
-    "socket.io": "^4.8.1"
+    "mqtt": "^5.10.1"
   },
   "scripts": {
     "start": "node app.js"
