--- a/config-service/dockerfile
+++ b/config-service/dockerfile
@@ -12,10 +12,7 @@ RUN npm install
 
 # Copy the rest of the application code
 COPY . .
-
-# Ensure the config directory exists and copy config.json to it
-RUN mkdir -p /usr/src/app/shared-config
-COPY /shared-config/config.json /usr/src/app/shared-config/config.json
+COPY /config.json /usr/src/app/config.json
 
 # Expose port 3004
 EXPOSE 3004
