--- a/config-service/package.json
+++ b/config-service/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.21.1",
-    "mqtt": "^5.10.1"
+    "mqtt": "^5.10.2",
+    "cors": "^2.8.5"
   },
   "scripts": {
     "start": "node app.js"
