--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ dist
 .yarn/install-state.gz
 .pnp.*
 mqtt-broker/mosquitto/data/mosquitto.db
+.vscode/sessions.json
+angular-frontend/package-lock.json
