--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,25 @@
 services:
+  gpio-emulator-service:
+    build:
+      context: ./gpio-emulator
+    container_name: gpio-emulator-service
+    ports:
+      - "3005:3005"
+    networks:
+      - internal-net
+    restart: unless-stopped
+    environment:
+      - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
+      - MOCK_I2C_DEVICE="/dev/i2c-mock"
+    volumes:
+      - ./mocks:/app/mocks
+
   config-service:
     build:
       context: ./config-service
     container_name: config-service
     ports:
-      - "3004:3004"  # Expose the service's HTTP API
+      - "3004:3004"
     networks:
       - internal-net
     depends_on:
@@ -12,21 +27,6 @@ services:
     environment:
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
     restart: unless-stopped
-
-  # angular-frontend:
-  #   build:
-  #     context: ./angular-frontend
-  #   container_name: angular-frontend-service
-  #   ports:
-  #     - "8082:8082"
-  #   networks:
-  #     - internal-net
-  #     - external-net
-  #   depends_on:
-  #     - mqtt-broker
-  #     - config-service
-  #   environment:
-  #     - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
 
   pid-balance-control:
     build:
@@ -38,11 +38,15 @@ services:
     devices:
       - /dev/i2c-1:/dev/i2c-1
       - /dev/gpiomem:/dev/gpiomem
+      - /dev/i2c-mock:/dev/i2c-mock
+    volumes:
+      - ./mocks:/app/mocks
     networks:
       - internal-net
     depends_on:
       - mqtt-broker
       - config-service
+      - gpio-emulator-service
     environment:
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
     restart: unless-stopped
@@ -100,9 +104,12 @@ services:
       MQTT_BROKER_URL: mqtt://mqtt-broker:1883
     depends_on:
       - mqtt-broker
+      - gpio-emulator-service
     networks:
       - internal-net
     restart: always
+    volumes:
+      - ./mocks:/app/mocks
 
   frontend:
     build:
@@ -160,52 +167,6 @@ services:
       - ./mqtt-broker/mosquitto/data:/mosquitto/data
       - ./mqtt-broker/mosquitto/log:/mosquitto/log
     restart: unless-stopped
-
-  # prometheus:
-  #   image: prom/prometheus:latest
-  #   container_name: prometheus
-  #   ports:
-  #     - "9090:9090"
-  #   volumes:
-  #     - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-  #   restart: unless-stopped
-
-  # grafana:
-  #   image: grafana/grafana:latest
-  #   container_name: grafana
-  #   ports:
-  #     - "3001:3000"
-  #   networks:
-  #     - internal-net
-  #     - external-net
-  #   environment:
-  #     - GF_SECURITY_ADMIN_PASSWORD=Grover428 # Change password here
-  #   volumes:
-  #     - grafana-storage:/var/lib/grafana
-  #   restart: unless-stopped
-
-  # node-exporter:
-  #   image: quay.io/prometheus/node-exporter:latest
-  #   container_name: node-exporter
-  #   ports:
-  #     - "9100:9100"
-  #   restart: unless-stopped
-  #   volumes:
-  #     - /proc:/host/proc:ro
-  #     - /sys:/host/sys:ro
-  #     - /:/rootfs:ro
-
-  # cadvisor:
-  #   image: gcr.io/cadvisor/cadvisor:latest
-  #   container_name: cadvisor
-  #   ports:
-  #     - "8081:8081"
-  #   volumes:
-  #     - /:/rootfs:ro
-  #     - /var/run:/var/run:rw
-  #     - /sys:/sys:ro
-  #     - /var/lib/docker/:/var/lib/docker:ro
-  #   restart: unless-stopped
 
 networks:
   internal-net:
