--- a/pid-balance/package.json
+++ b/pid-balance/package.json
@@ -12,7 +12,8 @@
     "i2c-bus": "^5.2.3",
     "coffee-script": "^1.12.7",
     "mqtt": "^5.10.1",
-    "axios": "1.7.7"
+    "axios": "1.7.7",
+    "detect-rpi": "^1.5.0"
   },
   "author": "Your Name",
   "license": "MIT"
