--- a/compose.yaml
+++ b/compose.yaml
@@ -11,7 +11,11 @@ services:
     environment:
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
       - MOCK_I2C_DEVICE="/dev/i2c-mock"
+    privileged: true
     volumes:
+      - /sys/class/gpio:/sys/class/gpio
+      - /proc/cpuinfo:/proc/cpuinfo
+      - /sys/firmware/devicetree/base/model:/sys/firmware/devicetree/base/model
       - ./mocks:/app/mocks
 
   config-service:
