--- a/gpio-emulator/package.json
+++ b/gpio-emulator/package.json
@@ -7,7 +7,7 @@
     "start": "node script.js"
   },
   "dependencies": {
-    "detect-rpi": "^1.5.0",
-    "i2c-bus": "^5.2.3"
+    "i2c-bus": "^5.2.3",
+    "pigpio": "^3.3.1"
   }
 }
